--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <header>
-      
-    </header>
-  </body>
+<!--Code By Webdevtrick ( https://webdevtrick.com )-->
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Client website</title>
+  <link rel="stylesheet" href="css/nav.css">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+</head>
+<body>
+  <header>
+    <div class="one">
+<ul class="list">
+<li>        <img class="header_img" src="img/2 (1).png" alt="">
+</li>
+
+<li><h1>Hello World</h1></li>
+<li>  <nav id="navbar">
+    <div class="container">
+      <ul>
+        <li><a href="sidenav.html">Home</a></li>
+        <li><a href="http://tinaye.epizy.com/index.html">About</a></li>
+        <li><a href="http://tinaye.epizy.com/services.html">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li> <a href="#"></a> </li>
+
+      </ul>
+    </div>
+  </nav></li>
+</ul>
+    </div>
+
+
+
+  </header>
+<div class="container">
+  <input data-function="swipe" id="swipe" type="checkbox">
+  <label data-function="swipe" for="swipe">&#xf057;</label>
+  <label data-function="swipe" for="swipe">&#xf0c9;</label>
+
+  <div class="headings">
+    <h1>Countries</h1>
+    <ul>
+      <li id="fir1"><div class="first">
+        <img id="fir" src="img/1 (1).jpg" width="600px" height="400px" alt="">
+        <p>Do you want to study in London?<a href="#">readmore...</a> </p>
+      </div></li>
+      <li id="sec1"><div class="second">
+        <img id="sec"src="img/1 (2).jpg" width="600px" height="400px" alt="">
+        <p>Do you want to study in Russia?<a href="#">readmore...</a> </p>
+      </div></li>
+    </ul>
+    <div class="hello">
+      <ul>
+        <li id="fir11"><div class="first">
+          <img id="fir12" src="img/1 (3).jpg" width="600px" height="400px" alt="">
+          <p>Do you want to study in London?<a href="#">readmore...</a> </p>
+        </div></li>
+        <li id="sec11"><div class="second">
+          <img id="sec12"src="img/1 (4).jpg" width="600px" height="400px" alt="">
+          <p>Do you want to study in Russia?<a href="#">readmore...</a> </p>
+        </div></li>
+      </ul>
+    </div>
+
+
+  </div>
+
+
+  <div class="sidebar">
+    <nav class="menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="http://tinaye.epizy.com/index.html">About</a></li>
+      <li><a href="http://tinaye.epizy.com/services.html">Services</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="http://c3labs.epizy.com/about.html">Blog</a></li>
+    </nav>
+  </div>
+
+</div>
+
+</body>
 </html>
