--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <title>Client website</title>
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -83,6 +84,18 @@
   </div>
 
 </div>
+
+<footer>
+<div class="footicons">
+  <hr>
+  <a href="#" class="fa fa-facebook-square" title="facebook"></a>
+  <a href="#" class="fa fa-twitter" title="twitter"></a>
+  <a href="#" class="fa fa-whatsapp" title="whatsapp"></a>
+  <a href="#" class="fa fa-wechat" title="wechat"></a>
+  <a href="#" class="fa fa-youtube-play" title="youtube"></a>
+  <p class="footp">&copy Copyright @2019 <br> All rights reserved | <i>Asterix</i>.</p>
+  </div>
+</footer>
 
 </body>
 </html>
