update of pages

--- a/indexpage.html
+++ b/indexpage.html
@@ -37,31 +37,23 @@ if (x.className === "topnav") {
 
 
 <div class="container">
-<div class="backg">
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
-  <p>testing good backgrounds</p>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
+</div>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
+</div>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
+</div>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
+</div>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
+</div>
+<div class="content">
+  <img src="2(1).png" class="contimg" alt="">
 </div>
 </div>
 
@@ -73,7 +65,7 @@ if (x.className === "topnav") {
       <a href="#" class="fa fa-whatsapp" title="whatsapp"></a>
       <a href="#" class="fa fa-wechat" title="wechat"></a>
       <a href="#" class="fa fa-youtube-play" title="youtube"></a>
-      <p class="footp">&copy Copyright @2019 <br> All rights reserved | <i>Asterix</i>.</p>
+      <p class="footp">&copy Copyright | 2019 <br> All rights reserved.</p>
       </div>
     </footer>
   </body>
