--- a/indexpage.html
+++ b/indexpage.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <header id="header">
+    <header id="header" class="header">
     <div class="topnav" id="myTopnav">
-    <a href="#" ><img src="2(1).png" alt="image here" id="mylogo"></a>
+    <a href="#" ><img src="img/2 (1).png" alt="image here" id="mylogo"></a>
     <a href="#home" class="links">Home</a>
     <a href="#news" class="links">News</a>
     <a href="#contact" class="links">Contact</a>
@@ -38,22 +38,22 @@ if (x.className === "topnav") {
 
 <div class="container">
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 <div class="content">
-  <img src="2(1).png" class="contimg" alt="">
+  <img src="img/2 (1).png" class="contimg" alt="">
 </div>
 </div>
 
