fixed the header color changing issue

--- a/indexpage.html
+++ b/indexpage.html
@@ -11,7 +11,8 @@
   <body>
     <header id="header" class="header">
     <div class="topnav" id="myTopnav">
-    <a href="#" ><img src="img/2 (1).png" alt="image here" id="mylogo"></a>
+    <a href="#" class="name"><img src="img/2 (1).png" alt="image here" id="mylogo"></a>
+    <a href="#home" class="">CompName</a>
     <a href="#home" class="links">Home</a>
     <a href="#news" class="links">News</a>
     <a href="#contact" class="links">Contact</a>
@@ -34,7 +35,7 @@ if (x.className === "topnav") {
 }
     </script>
 
-
+<script src="js/script.js"></script>
 
 <div class="container">
 <div class="content">
