--- a/indexpage.html
+++ b/indexpage.html
@@ -57,6 +57,9 @@ if (x.className === "topnav") {
 </div>
 </div>
 
+<button onclick="topFunction()" id="myBtn" title="Go to top">&#10148;</button>
+<script src="js/bck2top.js"></script>
+
     <footer>
 <div class="footicons">
       <hr>
