Added a new section soon after header.

--- a/indexpage.html
+++ b/indexpage.html
@@ -36,22 +36,28 @@ if (x.className === "topnav") {
 
 <script src="js/script.js"></script>
 
+
+<section id="section1">
+  <div id="section1-text-paragraph" class="section1-text">
+    <h1 class="section1-text" >Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit
+      esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+      occaecat cupidatat non proident, sunt in culpa qui officia
+      deserunt mollit anim id est laborum.</p>
+    <button id="button1" type="button" name="button">Learn More</button>
+    <button id="button2" type="button" name="button">Apply</button>
+  </div>
+  <img src="img/1 (8).jpg" alt="" height="400px" width="400px" id="rope"> <br>
+</section>
+
+
+
 <div class="container">
-<div class="content">
-  <img src="img/2 (1).png" class="contimg" alt="">
-</div>
-<div class="content">
-  <img src="img/2 (1).png" class="contimg" alt="">
-</div>
-<div class="content">
-  <img src="img/2 (1).png" class="contimg" alt="">
-</div>
-<div class="content">
-  <img src="img/2 (1).png" class="contimg" alt="">
-</div>
-<div class="content">
-  <img src="img/2 (1).png" class="contimg" alt="">
-</div>
 <div class="content">
   <img src="img/2 (1).png" class="contimg" alt="">
 </div>
