Fixed modal issue

--- a/indexpage.html
+++ b/indexpage.html
@@ -55,6 +55,8 @@ if (x.className === "topnav") {
   </div>
 </section>
 
+
+
 <!--THE COUNTRY SECTION OF THE SITE-->
 <section class="container">
   <div class="content">
@@ -67,15 +69,22 @@ if (x.className === "topnav") {
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
 
-    <!-- The Modal for first country-->
-    <div id="myModal1" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>THIS IS THE CONTENT OF THE FIRST COUNTRY</p>
+    <!-- Trigger/Open the Modal -->
+    <button onclick="document.getElementById('id01').style.display='block'"
+    class="w3-button">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="id01" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="document.getElementById('id01').style.display='none'"
+          class="close">&times;</span>
+          <p>Some text in the Modal1..</p>
+          <p>Some text in the Modal1..</p>
+        </div>
       </div>
+    </div>
       <script src="js/modal1.js"></script>
-      </div>
 
 
 
@@ -88,16 +97,21 @@ if (x.className === "topnav") {
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
 
-    <!-- The Modal for second country-->
-    <div id="myModal2" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>THIS IS THE CONTENT OF THE SECOND COUNTRY</p>
+    <!-- Trigger/Open the Modal -->
+    <button onclick="document.getElementById('id02').style.display='block'"
+    class="w3-button">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="id02" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="document.getElementById('id02').style.display='none'"
+          class="close">&times;</span>
+          <p>Some text in the Modal2..</p>
+          <p>Some text in the Modal2..</p>
+        </div>
       </div>
-      <script src="js/modal2.js"></script>
-      </div>
-      <script src="js/modalflex.js"></script>
+    </div>
     </div>
 
     <div class="content">
@@ -111,6 +125,22 @@ if (x.className === "topnav") {
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
 
+    <!-- Trigger/Open the Modal -->
+    <button onclick="document.getElementById('id03').style.display='block'"
+    class="w3-button">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="id03" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="document.getElementById('id03').style.display='none'"
+          class="close">&times;</span>
+          <p>Some text in the Modal3..</p>
+          <p>Some text in the Modal3..</p>
+        </div>
+      </div>
+    </div>
+
     <div id="countries" class="countries">
       <img src="img/2 (1).png" class="contimg" alt="">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -119,6 +149,23 @@ if (x.className === "topnav") {
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
+
+    <!-- Trigger/Open the Modal -->
+    <button onclick="document.getElementById('id04').style.display='block'"
+    class="w3-button">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="id04" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="document.getElementById('id04').style.display='none'"
+          class="close">&times;</span>
+          <p>Some text in the Modal4..</p>
+          <p>Some text in the Modal4..</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="content">
@@ -130,6 +177,23 @@ if (x.className === "topnav") {
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
       reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
+
+  <!-- Trigger/Open the Modal -->
+  <button onclick="document.getElementById('id05').style.display='block'"
+  class="w3-button">Open Modal</button>
+
+  <!-- The Modal -->
+  <div id="id05" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('id05').style.display='none'"
+        class="close">&times;</span>
+        <p>Some text in the Modal5..</p>
+        <p>Some text in the Modal5..</p>
+      </div>
+    </div>
+  </div>
+
   <div id="countries" class="countries">
     <img src="img/2 (1).png" class="contimg" alt="">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -138,6 +202,23 @@ if (x.className === "topnav") {
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
       reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </div>
+
+  <!-- Trigger/Open the Modal -->
+  <button onclick="document.getElementById('id06').style.display='block'"
+  class="w3-button">Open Modal</button>
+
+  <!-- The Modal -->
+  <div id="id06" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('id06').style.display='none'"
+        class="close">&times;</span>
+        <p>Some text in the Modal6..</p>
+        <p>Some text in the Modal6..</p>
+      </div>
+    </div>
+  </div>
+
 </div>
 </section>
 
