--- a/indexpage.html
+++ b/indexpage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -39,7 +39,7 @@ if (x.className === "topnav") {
 
 <section id="section1">
   <div id="section1-content">
-    <div class="">
+    <div class="h1andp">
       <h1 class="section1-text" >Lorem ipsum dolor sit amet</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -49,8 +49,8 @@ if (x.className === "topnav") {
         <button id="button1" type="button" name="button">Learn More</button>
         <button id="button2" type="button" name="button">Apply</button>
     </div>
-      <div class="">
-        <img src="img/1 (8).jpg" alt="" id="rope">
+      <div class="rope">
+      <img src="img/1 (8).jpg" alt="" id="rope">
       </div>
   </div>
 </section>
