--- a/indexpage.html
+++ b/indexpage.html
@@ -62,25 +62,36 @@ if (x.className === "topnav") {
   <div class="content">
     <div id="countries1" class="countries">
       <img src="img/2 (1).png" class="contimg" alt="">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <div id="stories">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit...
+          <p onclick="document.getElementById('id01').style.display='block'"class="w3-button">Learn More</p></p>
+      </div>
     </div>
-
-    <!-- Trigger/Open the Modal -->
-    <button onclick="document.getElementById('id01').style.display='block'"
-    class="w3-button">Open Modal</button>
 
     <!-- The Modal -->
     <div id="id01" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
-          <span onclick="document.getElementById('id01').style.display='none'"
-          class="close">&times;</span>
-          <p>Some text in the Modal1..</p>
-          <p>Some text in the Modal1..</p>
+          <div id="modalimg">
+            <img src="img/2 (1).png" class="modalimg" alt="">
+            </div>
+          <div class="">
+          <h1 class="modalh1">Apply in Morroco</h1>
+          <div class="modalp">
+          <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+            </div>
+            </div>
+            <span onclick="document.getElementById('id01').style.display='none'"class="close">&times;</span>
         </div>
       </div>
     </div>
@@ -94,21 +105,29 @@ if (x.className === "topnav") {
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        reprehenderit...<p onclick="document.getElementById('id02').style.display='block'"class="w3-button">Learn More</p></p>
     </div>
-
-    <!-- Trigger/Open the Modal -->
-    <button onclick="document.getElementById('id02').style.display='block'"
-    class="w3-button">Open Modal</button>
 
     <!-- The Modal -->
     <div id="id02" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
-          <span onclick="document.getElementById('id02').style.display='none'"
-          class="close">&times;</span>
-          <p>Some text in the Modal2..</p>
-          <p>Some text in the Modal2..</p>
+          <div id="modalimg">
+            <img src="img/2 (1).png" class="modalimg" alt="">
+            </div>
+          <div class="">
+          <h1 class="modalh1">Apply in China</h1>
+          <div class="modalp">
+          <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+            </div>
+            </div>
+            <span onclick="document.getElementById('id02').style.display='none'"class="close">&times;</span>
         </div>
       </div>
     </div>
@@ -122,21 +141,29 @@ if (x.className === "topnav") {
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        reprehenderit...<p onclick="document.getElementById('id03').style.display='block'"class="w3-button">Learn More</p></p>
     </div>
-
-    <!-- Trigger/Open the Modal -->
-    <button onclick="document.getElementById('id03').style.display='block'"
-    class="w3-button">Open Modal</button>
 
     <!-- The Modal -->
     <div id="id03" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
-          <span onclick="document.getElementById('id03').style.display='none'"
-          class="close">&times;</span>
-          <p>Some text in the Modal3..</p>
-          <p>Some text in the Modal3..</p>
+          <div id="modalimg">
+            <img src="img/2 (1).png" class="modalimg" alt="">
+            </div>
+          <div class="">
+          <h1 class="modalh1">Apply in Japan</h1>
+          <div class="modalp">
+          <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+            </div>
+            </div>
+            <span onclick="document.getElementById('id03').style.display='none'"class="close">&times;</span>
         </div>
       </div>
     </div>
@@ -147,21 +174,29 @@ if (x.className === "topnav") {
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        reprehenderit...<p onclick="document.getElementById('id04').style.display='block'"class="w3-button">Learn More</p></p>
     </div>
-
-    <!-- Trigger/Open the Modal -->
-    <button onclick="document.getElementById('id04').style.display='block'"
-    class="w3-button">Open Modal</button>
 
     <!-- The Modal -->
     <div id="id04" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
-          <span onclick="document.getElementById('id04').style.display='none'"
-          class="close">&times;</span>
-          <p>Some text in the Modal4..</p>
-          <p>Some text in the Modal4..</p>
+          <div id="modalimg">
+            <img src="img/2 (1).png" class="modalimg" alt="">
+            </div>
+          <div class="">
+          <h1 class="modalh1">Apply in Iran</h1>
+          <div class="modalp">
+          <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+            </div>
+            </div>
+            <span onclick="document.getElementById('id04').style.display='none'"class="close">&times;</span>
         </div>
       </div>
     </div>
@@ -175,21 +210,29 @@ if (x.className === "topnav") {
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      reprehenderit...<p onclick="document.getElementById('id05').style.display='block'"class="w3-button">Learn More</p></p>
   </div>
-
-  <!-- Trigger/Open the Modal -->
-  <button onclick="document.getElementById('id05').style.display='block'"
-  class="w3-button">Open Modal</button>
 
   <!-- The Modal -->
   <div id="id05" class="w3-modal">
     <div class="w3-modal-content">
       <div class="w3-container">
-        <span onclick="document.getElementById('id05').style.display='none'"
-        class="close">&times;</span>
-        <p>Some text in the Modal5..</p>
-        <p>Some text in the Modal5..</p>
+        <div id="modalimg">
+          <img src="img/2 (1).png" class="modalimg" alt="">
+          </div>
+        <div class="">
+        <h1 class="modalh1">Apply in Hongkong</h1>
+        <div class="modalp">
+        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.</p>
+          </div>
+          </div>
+          <span onclick="document.getElementById('id05').style.display='none'"class="close">&times;</span>
       </div>
     </div>
   </div>
@@ -200,21 +243,29 @@ if (x.className === "topnav") {
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      reprehenderit...</p><p onclick="document.getElementById('id06').style.display='block'"class="w3-button">Learn More</p>
   </div>
-
-  <!-- Trigger/Open the Modal -->
-  <button onclick="document.getElementById('id06').style.display='block'"
-  class="w3-button">Open Modal</button>
 
   <!-- The Modal -->
   <div id="id06" class="w3-modal">
     <div class="w3-modal-content">
       <div class="w3-container">
-        <span onclick="document.getElementById('id06').style.display='none'"
-        class="close">&times;</span>
-        <p>Some text in the Modal6..</p>
-        <p>Some text in the Modal6..</p>
+        <div id="modalimg">
+          <img src="img/2 (1).png" class="modalimg" alt="">
+          </div>
+        <div class="">
+        <h1 class="modalh1">Apply in Rwanda</h1>
+        <div class="modalp">
+        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.</p>
+          </div>
+          </div>
+          <span onclick="document.getElementById('id06').style.display='none'"class="close">&times;</span>
       </div>
     </div>
   </div>
