Testing on VS code

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   </div>
 </div>
 
-<!-- Services part-->
+<!-- Services part Done buy Esuyaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
 <div class="services-section">
   <div class="inner-width">
     <h1 class="section-title">Our Services</h1>
