--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 </div>
 
 
-<!-- Contact Section -->
+<!-- . Contact Section -->
 <div id="contact" class="text-center">
   <div class="social">
     <ul>
